# build-with-ag2

./: .gitattributes  .pre-commit-config.yaml  README.md  external_repo_guide.md
.github/: ISSUE_TEMPLATE.md
automate-ml-for-kaggle/: Dockerfile  OAI_CONFIG_LIST_sample  README.md  build_and_run.sh  docker-compose.yml  docker_requirements.txt  main.py  requirements.txt  train_file_by_agent.py  utils.py
cookbook/: JSON_mode_example.ipynb  agentchat_MathChat.ipynb  agentchat_RetrieveChat.ipynb  agentchat_RetrieveChat_mongodb.ipynb  agentchat_RetrieveChat_pgvector.ipynb  agentchat_RetrieveChat_qdrant.ipynb  agentchat_agentops.ipynb  agentchat_agentoptimizer.ipynb  agentchat_azr_ai_search.ipynb  (+63 more)
samples/apps/cap/py/: pyproject.toml
samples/apps/cap/py/autogencap/: Actor.py  ActorConnector.py  Broker.py  Config.py  DebugLog.py  DirectorySvc.py  actor_runtime.py  constants.py  requirements.txt  runtime_factory.py  setup.py  utility.py  zmq_runtime.py
samples/apps/cap/py/autogencap/ag_adapter/: AG2CAP.py  AGActor.py  AutoGenConnector.py  CAP2AG.py  CAPGroupChat.py  CAPGroupChatManager.py  CAPPair.py  agent.py
samples/apps/cap/py/autogencap/proto/: Autogen_pb2.py  Autogen_pb2.pyi  CAP_pb2.py  CAP_pb2.pyi
samples/apps/cap/py/demo/: AGDemo.py  AGGroupChatDemo.py  App.py  AppAgents.py  CAPAutGenGroupDemo.py  CAPAutoGenPairDemo.py  ComplexActorDemo.py  RemoteAGDemo.py  SimpleActorDemo.py  _paths.py  list_agents.py  single_threaded.py  zmq_tests.py
samples/apps/cap/py/demo/standalone/: Broker.py  UserProxy.py  _paths.py  assistant.py  directory_svc.py  user_proxy.py
(+163 files in other folders)
