[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogencap"
version = "0.0.11"
authors = [
  { name="Rajan Chari", email="rajan.jedi@gmail.com" },
]
dependencies = [
    "pyzmq >= 25.1.2",
    "protobuf >= 4.25.3",
    "termcolor >= 2.4.0",
    "autogen >= 0.3.0",
]
description = "CAP w/ autogen bindings"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/autogenhub/autogen"
"Bug Tracker" = "https://github.com/autogenhub/autogen/issues"

[tool.hatch.build.targets.sdist]
packages = ["autogencap"]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["autogencap"]
only-packages = true
